<resources>
    <string name="app_name">CareCompanion</string>

    // Sign in page
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="log_in">Log in</string>
    <string name="question">Are you a new user?</string>
    <string name="register">Register</string>
    <string name="google_login">SignIn with Google</string>
    <string name="web_client_id">438431947620-ecpi41uk3dhhf4mv8g8q993k3vs49ltm.apps.googleusercontent.com</string>


    // Sign up page
    <string name="create_an_account">Create an Account</string>
    <string name="enter_name">Enter Full Name</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="janedoe_gmail_com">janedoe@gmail.com</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="yes_i_agree_to_the">Yes, I agree to the</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>

    // Homepage
    <string name="slogan">ageing, gracefully…​</string>
    <string name="medical_id">Medical Id</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="help_bot">Help Bot</string>

    // Create medical id
    <string name="please_provide_your_medical_information_in_the_columns_below">Please provide your medical information in the columns below.</string>
    <string name="medical_information">Medical Information</string>
    <string name="medical_conditions">Medical conditions</string>
    <string name="blood_type">Blood type</string>
    <string name="allergies">Allergies</string>
    <string name="current_medication">Current medication</string>
    <string name="weight">Weight</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="address">Address</string>
    <string name="organ_donor">Organ donor</string>
    <string name="height">Height</string>
    <string name="next">Next</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify password</string>
    <string name="enter_your_height">Enter your height</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="list_your_medical_conditions">List your medical conditions</string>
    <string name="list_your_allergies">List your allergies</string>
    <string name="list_any_medication_you_take">List any medication you take</string>
    <string name="enter_your_weight">Enter your weight</string>

    <string-array name="blood_array">
        <item>Tap to select blood type</item>
        <item>Type A</item>
        <item>Type B</item>
        <item>Type AB</item>
        <item>Type O</item>
    </string-array>

    <string-array name="organ_array">
        <item>Tap to set status</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>

    // Calendar
    <string name="add_reminder">New Reminder</string>
    <string name="no_reminders">No Reminders</string>

    // Medical Id
    <string name="name">Jane Doe</string>
    <string name="location">Huddersfield, England</string>
    <string name="emergency_contact">UK Emergency Contact</string>
    <string name="emergency_no">999</string>
    <string name="my_emergency_contact">My Emergency Contact</string>
    <string name="DOB">25/11/1965</string>
    <string name="medical_condition">Diabetes (Hypoglycemia)</string>
    <string name="current_medications"> Insulin, EpiPen - incase of allergic reaction.</string>
    <string name="allergy">Penicillin (severe skin rash)</string>
    <string name="my_blood_type">AB+</string>


</resources>