<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BEC9D3"
    tools:context=".Create_medical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="12dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="45dp"
            android:layout_height="35dp"
            android:layout_marginTop="25dp"
            android:onClick="launchSignUpPage"
            app:srcCompat="?attr/actionModeCloseDrawable"
            android:background="#BEC9D3"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_information"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/dark_blue"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:paddingBottom="15dp"
            android:layout_marginStart="20dp"
            android:text="@string/please_provide_your_medical_information_in_the_columns_below"
            android:textColor="@color/dark_blue"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/txtcondition"
            android:layout_width="332dp"
            android:layout_height="30dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/medical_id_bg"
            android:drawableStart="@drawable/clipboard_list_logo"
            android:ems="10"
            android:drawablePadding="20dp"
            android:hint="@string/medical_conditions"
            android:textColor="@color/dark_blue"
            android:textSize="17sp"
            android:textStyle="bold"
            android:editable="false"/>

        <EditText
            android:id="@+id/editTxtMultiLine"
            android:layout_width="320dp"
            android:layout_height="30dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:hint="@string/list_your_medical_conditions"
            android:textSize="16sp"
            android:background="@null"
            android:textColor="@color/dark_blue"
            android:paddingStart="50dp"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_width="340dp"
            android:layout_height="1dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="3dp"
            android:background="#000000" />

        <EditText
            android:id="@+id/txtcondition2"
            android:layout_width="332dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/medical_id_bg"
            android:drawableStart="@drawable/blood_type_logo"
            android:ems="10"
            android:drawablePadding="20dp"
            android:hint="@string/blood_type"
            android:textColor="@color/dark_blue"
            android:textSize="17sp"
            android:textStyle="bold"
            android:editable="false"/>

        <Spinner
            android:id="@+id/spinnerBlood"
            android:layout_width="320dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"/>

        <View
            android:layout_width="340dp"
            android:layout_height="1dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="3dp"
            android:background="#000000" />

        <EditText
            android:id="@+id/txtcondition3"
            android:layout_width="332dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/medical_id_bg"
            android:drawableStart="@drawable/no_logo"
            android:ems="10"
            android:drawablePadding="20dp"
            android:hint="@string/allergies"
            android:textColor="@color/dark_blue"
            android:textSize="17sp"
            android:textStyle="bold"
            android:editable="false"/>

        <EditText
            android:id="@+id/editTxtMultiLine3"
            android:layout_width="320dp"
            android:layout_height="30dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:hint="@string/list_your_allergies"
            android:textSize="16sp"
            android:background="@null"
            android:textColor="@color/dark_blue"
            android:paddingStart="50dp"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_width="340dp"
            android:layout_height="1dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="3dp"
            android:background="#000000" />

        <EditText
            android:id="@+id/txtcondition4"
            android:layout_width="332dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/medical_id_bg"
            android:drawableStart="@drawable/medicine_logo"
            android:ems="10"
            android:drawablePadding="20dp"
            android:hint="@string/current_medication"
            android:textColor="@color/dark_blue"
            android:textSize="17sp"
            android:textStyle="bold"
            android:editable="false"/>

        <EditText
            android:id="@+id/editTxtMultiLine4"
            android:layout_width="320dp"
            android:layout_height="30dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:hint="@string/list_any_medication_you_take"
            android:textSize="16sp"
            android:background="@null"
            android:textColor="@color/dark_blue"
            android:paddingStart="50dp"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_width="340dp"
            android:layout_height="1dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="3dp"
            android:background="#000000" />

        <EditText
            android:id="@+id/txtcondition5"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/medical_id_bg"
            android:drawableStart="@drawable/weight_logo"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/weight"
            android:textColor="@color/dark_blue"
            android:textSize="17sp"
            android:textStyle="bold"
            android:editable="false"/>

        <EditText
            android:id="@+id/editTxtMultiLine5"
            android:layout_width="320dp"
            android:layout_height="30dp"
            android:ems="10"
            android:hint="@string/enter_your_weight"
            android:textSize="16sp"
            android:background="@null"
            android:textColor="@color/dark_blue"
            android:paddingStart="50dp"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_width="340dp"
            android:layout_height="1dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="3dp"
            android:background="#000000" />

        <EditText
            android:id="@+id/txtcondition6"
            android:layout_width="332dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/medical_id_bg"
            android:drawableStart="@drawable/stick_man_logo"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/height"
            android:textColor="@color/dark_blue"
            android:textSize="17sp"
            android:textStyle="bold"
            android:editable="false"/>

        <EditText
            android:id="@+id/editTxtMultiLine6"
            android:layout_width="320dp"
            android:layout_height="30dp"
            android:ems="10"
            android:hint="@string/enter_your_height"
            android:textSize="16sp"
            android:background="@null"
            android:textColor="@color/dark_blue"
            android:paddingStart="50dp"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_width="340dp"
            android:layout_height="1dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="3dp"
            android:background="#000000" />

        <EditText
            android:id="@+id/txtcondition8"
            android:layout_width="332dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/medical_id_bg"
            android:drawableStart="@drawable/address_location"
            android:ems="10"
            android:drawablePadding="20dp"
            android:hint="@string/address"
            android:textColor="@color/dark_blue"
            android:textSize="17sp"
            android:textStyle="bold"
            android:editable="false"/>

        <EditText
            android:id="@+id/editTxtMultiLine8"
            android:layout_width="320dp"
            android:layout_height="30dp"
            android:ems="10"
            android:hint="@string/enter_your_address"
            android:textSize="16sp"
            android:background="@null"
            android:textColor="@color/dark_blue"
            android:paddingStart="50dp"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_width="340dp"
            android:layout_height="1dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="3dp"
            android:background="#000000" />

        <EditText
            android:id="@+id/txtcondition9"
            android:layout_width="332dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/medical_id_bg"
            android:drawableStart="@drawable/donation_logo"
            android:ems="10"
            android:drawablePadding="20dp"
            android:hint="@string/organ_donor"
            android:textColor="@color/dark_blue"
            android:textSize="17sp"
            android:textStyle="bold"
            android:editable="false"/>

        <Spinner
            android:id="@+id/spinnerOrgan"
            android:layout_width="320dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"/>

        <View
            android:layout_width="340dp"
            android:layout_height="1dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="3dp"
            android:background="#000000" />

        <Button
            android:id="@+id/Signup"
            android:layout_width="190dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/btn_bg"
            app:backgroundTint="@color/dark_blue"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="#BEC9D3"
            android:textSize="22sp"
            android:onClick="launchSignInPage"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>