<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".Homepage"
    android:background="#BEC9D3">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F2F2F2"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="#F2F2F2"
            android:onClick="launchHomepage"
            app:srcCompat="?attr/actionModeCloseDrawable" />


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:paddingEnd="20dp"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/medical_settings_logo"
            android:background="#F2F2F2"
            android:onClick="launchSettingsPage"/>

        <ImageView
            android:id="@+id/profile"
            android:layout_width="107dp"
            android:layout_height="94dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="9dp"
            android:adjustViewBounds="true"
            android:background="@drawable/circle_border"
            android:padding="3dp"
            android:scaleType="centerInside"
            android:src="@drawable/profile_circle_logo" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile"
            android:layout_alignBaseline="@+id/profile"
            android:layout_centerHorizontal="true"
            android:text="@string/name"
            android:textColor="@color/dark_blue"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:layout_centerHorizontal="true"
            android:text="@string/location"
            android:textAllCaps="true"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linlay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_address"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/dark_blue"
                android:gravity="center"
                android:paddingTop="6dp"
                android:paddingBottom="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/emergency_contact"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/emergency_no"
                        android:textColor="@color/white"
                        android:textSize="19sp" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/dark_blue"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="6dp"
                android:paddingBottom="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_emergency_contact"
                        android:textAllCaps="true"
                        android:textColor="#F2F2F2"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="07234156766"
                        android:textColor="#F2F2F2"
                        android:textSize="19sp" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/txtDOB"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/medical_id_bg"
            android:drawableStart="@drawable/calendar2"
            android:drawablePadding="20dp"
            android:hint="@string/date_of_birth"
            android:textColor="@color/dark_blue"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="50dp"
            android:text="@string/DOB"
            android:textColor="#000000"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/grey" />


        <TextView
            android:id="@+id/txtcondition"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/medical_id_bg"
            android:drawableStart="@drawable/clipboard_list_logo"
            android:drawablePadding="20dp"
            android:hint="@string/medical_conditions"
            android:textColor="@color/dark_blue"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="50dp"
            android:text="@string/medical_condition"
            android:textColor="#000000"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/txtcondition4"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/medical_id_bg"
            android:drawableStart="@drawable/medicine_logo"
            android:drawablePadding="20dp"
            android:hint="@string/current_medication"
            android:textColor="@color/dark_blue"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="50dp"
            android:text="@string/current_medications"
            android:textColor="#000000"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/txtcondition3"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/medical_id_bg"
            android:drawableStart="@drawable/no_logo"
            android:drawablePadding="20dp"
            android:hint="@string/allergies"
            android:textColor="@color/dark_blue"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="50dp"
            android:text="@string/allergy"
            android:textColor="#000000"
            android:textSize="16sp" />

        <View
            android:layout_width="375dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/grey" />


        <TextView
            android:id="@+id/txtcondition2"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/medical_id_bg"
            android:drawableStart="@drawable/blood_type_logo"
            android:drawablePadding="20dp"
            android:hint="@string/blood_type"
            android:textColor="@color/dark_blue"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="50dp"
            android:text="@string/my_blood_type"
            android:textColor="#000000"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/txtcondition5"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/medical_id_bg"
            android:drawableStart="@drawable/weight_logo"
            android:drawablePadding="20dp"
            android:hint="@string/weight"
            android:textColor="@color/dark_blue"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="50dp"
            android:text="62kg"
            android:textColor="#000000"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/txtcondition6"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/medical_id_bg"
            android:drawableStart="@drawable/stick_man_logo"
            android:drawablePadding="20dp"
            android:hint="@string/height"
            android:textColor="@color/dark_blue"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="50dp"
            android:text="172cm"
            android:textColor="#000000"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/txtcondition7"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/medical_id_bg"
            android:drawablePadding="20dp"
            android:hint="@string/organ_donor"
            android:textColor="@color/dark_blue"
            android:textSize="17sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/donation_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="50dp"
            android:text="Yes"
            android:textColor="#000000"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>